# proto-fleet

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  dev.sh  go.work  go.work.sum  justfile  latest.json  latest.txt
.claude/commands/: pr-describe.md  pr-ready.md
.github/: client-e2e-tests.yml  dependabot.yml  review-policy.json
.github/scripts/: evaluate_review_policy.py  evaluate_review_policy_test.py
.github/workflows/: asicrs-plugin-checks.yml  codex-security-review.yml  dependency-review.yml  deployment-config-checks.yml  generated-code-check.yml  mdk-api-docs.yml  migration-hygiene.yml  nightly-builds.yml  powershell-lint.yml  pr-gate.yml  proto-fleet-artifact-build.yml  protofleet-antminer-plugin-checks.yml  protofleet-client-checks.yml  protofleet-contract-checks.yml  protofleet-e2e-real-miners-manual.yml  protofleet-e2e-tests.yml  protofleet-example-python-plugin-checks.yml  protofleet-proto-checks.yml  protofleet-proto-plugin-checks.yml  protofleet-server-checks.yml  protoos-e2e-tests.yml  (+6 more)
client/: package-lock.json  package.json  vite.config.ts
deployment-files/: README.md  docker-compose.alerts.yaml  docker-compose.notifications.yaml  docker-compose.yaml  run-fleet.sh
plugin/asicrs/: Cargo.toml
plugin/asicrs/src/: device.rs
server/: Dockerfile  Dockerfile.dev  Dockerfile.fleetnode.dev  docker-compose.alerts.yaml  docker-compose.base.yaml  docker-compose.fleetnode-ui-test.yaml  docker-compose.modbus-sim.yaml  docker-compose.notifications.yaml  docker-compose.yaml  go.mod  go.sum  justfile  otel-collector-config.yaml  sqlc.yaml
(+903 files in other folders)
