[package]
name = "asicrs-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asicrs-plugin"
path = "src/main.rs"

[dependencies]
# Fleet plugin SDK
proto-fleet-plugin = { path = "../../sdk/rust/proto-fleet-plugin" }
tonic = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost-types = "0.13"

# asic-rs miner library
asic-rs = "0.5.4"
asic-rs-core = "0.5.4"
measurements = "0.11"

# config
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utils
anyhow = "1"
futures = "0.3"
